--- a/src/_player-table.scss
+++ b/src/_player-table.scss
@@ -8,7 +8,6 @@
   .name-wrapper {
     position: relative;
     display: flex;
-    background: #FFFFFFAA;
     padding: 5px;
     justify-content: center;
     align-items: center;
@@ -17,40 +16,12 @@
       font-size: 20pt;
       font-weight: bold;
     }
+  }
 
-    .bubble-wrapper {
-      position: absolute;
-      bottom: 110%;
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      pointer-events: none;
-
-      .discussion_bubble {
-        position: unset;
-        white-space: nowrap;
-        display: unset;
-        opacity: 0;
-        transition: opacity 0.5s;
-        bottom: 110%;
-  
-        &[data-visible="true"] {
-          opacity: 1;
-        }
-  
-        .bubble-score {
-          margin-top: 8px;
-        }
-  
-        &::after {
-          left: calc(50% - 15px);
-        }
-      }
-    }
-
-    .counter {
-      margin-left: 8px;
-    }
+  .player-cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 
   .cards {
