--- a/src/_stacks.scss
+++ b/src/_stacks.scss
@@ -1,108 +1,20 @@
 #table-center {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center; 
-    border: 2px solid #60c2cb;
+    gap: 20px;
     padding: 5px; 
-    border-radius: 15px;
-    background: #60c2cb66;
     min-width: 505px;
 
-    #deck-and-discards {
-        display: flex;
-        justify-content: center;
-        align-items: center;        
-
-        #deck {
-            &[data-empty="true"] {
-                background: #60c2cb66;
-                box-shadow: 5px 5px 3px #60c2cb66;
-            }
-        }
-
-        .discard-stack {
-            display: inline-block;
-            position: relative;
-            width: 159px;
-            height: 218px;
-            margin: 5px;
-            border-radius: 10px;
-            border: 1px solid white;
-            background-color: #FFFFFF66;
-        }
-    }
-
-    #pick {
+    .discard-stack {
+        display: inline-block;
         position: relative;
-        background-color: #60c2cb;
+        width: 159px;
+        height: 218px;
+        margin: 5px;
         border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 350px;
-        min-height: 230px;
-        margin-top: 10px;
-        transition: background-color 0.5s;
-    
-        &[data-visible="false"] {
-            background-color: transparent;
-
-            &::before {
-                border-color: transparent;
-            }
-        }
-
-        &::before {
-            transition: border-color 0.5s;
-            top: -12px;
-            border-width: 0 12px 12px 12px;
-            border-color: #60c2cb transparent;
-            border-style: solid;
-            content: '';
-            display: block;
-            left: 7px;
-            position: absolute;
-            width: 0;
-        }
-    }
-}
-
-html.expansion {
-    #table-center {
-        border-color: #1a5b93;
-        background: #1a5b9366;
-
-        #deck-and-discards {
-            #deck {
-                &[data-empty="true"] {
-                    background: #1a5b9366;
-                    box-shadow: 5px 5px 3px #1a5b9366;
-                }
-            }
-        }
-
-        #pick[data-visible="true"] {
-            background-color: #1a5b93;
-
-            &::before {
-                border-color: #1a5b93 transparent;
-            }
-        }
-    }
-}
-
-#discard-pick {
-    background: #FFFFFF66;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-    flex-wrap: wrap;
-    margin-bottom: 10px;
-    padding: 5px;
-
-    &[data-visible="false"] {
-        display: none;
+        border: 1px solid white;
+        background-color: #FFFFFF66;
     }
 }
 
